using docker-compose and kafka

--- a/Costumer/appsettings.json
+++ b/Costumer/appsettings.json
@@ -2,7 +2,7 @@
   "topic": "order",
   "kafka": {
     "configuration": {
-      "bootstrap.servers": "localhost:9092"
+      "bootstrap.servers": "kafka:29092"
     }
   }
 }
