--- a/Orders/appsettings.json
+++ b/Orders/appsettings.json
@@ -4,7 +4,7 @@
   
   "kafka": {
     "configuration": {
-      "bootstrap.servers": "localhost:9092",
+      "bootstrap.servers": "kafka:29092",
       "group.id": "paysOrder",
       "enable.auto.commit": "false",
       "auto.offset.reset": "earliest"
