--- a/Costumer/appsettings.json
+++ b/Costumer/appsettings.json
@@ -2,7 +2,11 @@
   "topic": "order",
   "kafka": {
     "configuration": {
-      "bootstrap.servers": "kafka:29092"
+      "bootstrap.servers": "localhost:9092", //"kafka:29092"
+      "acks": "all",
+      "enable.idempotence": "true",
+      "max.in.flight.requests.per.connection": "5",
+      "retries": "2147483647"
     }
   }
 }
