--- a/Orders/appsettings.json
+++ b/Orders/appsettings.json
@@ -4,10 +4,11 @@
   
   "kafka": {
     "configuration": {
-      "bootstrap.servers": "kafka:29092",
+      "bootstrap.servers": "localhost:9092", //"kafka:29092",
       "group.id": "paysOrder",
       "enable.auto.commit": "false",
-      "auto.offset.reset": "earliest"
+      "auto.offset.reset": "earliest",
+      "enable.idempotence": "True"
     }
   }
 }
